--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Comming soon page</title>
     <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
 </head>
 
 <body>
@@ -39,26 +40,7 @@
         </div>
         <img src="image/rocket.png" class="rocket" alt="">
     </div>
-    <script>
-        var countDownDate = new Date("Nov 13, 2024 00:00:00").getTime();
-        var x = setInterval(function() {
-            var now = new Date().getTime();
-            var distance = countDownDate - now;
-
-            var days = Math.floor(distance / (1000 * 60 * 60 * 24));
-            var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-            var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
-            var seconds = Math.floor((distance % (1000 * 60)) / 1000);
-        
-        document.getElementById("days").innerHTML = days ;
-        document.getElementById("hours").innerHTML = hours ;
-        document.getElementById("minutes").innerHTML = minutes ;
-        document.getElementById("seconds").innerHTML = seconds ;
-        
-        },1000);
-
-
-    </script>
+  
 </body>
 
 </html>
